Added Booking Ref to successful bookings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -435,9 +435,12 @@ h1 {
 
 /* SUCCESSFUL BOOKING CSS */
 
+
 .table td {
-    word-wrap: break-word;
-    word-break: break-all;
+    overflow-wrap: anywhere;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
 
 .table {
