--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -7,7 +7,7 @@
             <h1 class="display-1 text-center">404</h1>
             <p class="lead text-center">Sorry, the page you are looking for could not be found.</p>
             <p class="text-center">
-                <a href="{% url 'home' %}" class="btn btn-primary">Return to the homepage</a>
+                <a href="{% url 'index' %}" class="btn btn-primary">Return to the homepage</a>
             </p>
         </div>
     </div>
