--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -7,7 +7,7 @@
             <h1 class="display-1 text-center">500</h1>
             <p class="lead text-center">Sorry, there was an internal server error.</p>
             <p class="text-center">
-                <a href="{% url 'home' %}" class="btn btn-primary">Return to the homepage</a>
+                <a href="{% url 'index' %}" class="btn btn-primary">Return to the homepage</a>
             </p>
         </div>
     </div>
