Updated JS and moved to JS files

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,7 @@
     <!-- Footer -->
     {% include 'footer.html' %}
 
-    <script>
-        setTimeout(function () {
-            let messages = document.getElementById('msg');
-            let alert = new bootstrap.Alert(messages);
-            alert.close();
-        }, 2500);
-    </script>
+
     {% include 'custom_modal.html' %}
 
 
@@ -77,6 +71,9 @@
     <script src="{% static 'js/confirm_cancel_reservation.js' %}"></script>
     <script src="{% static 'js/confirm_reservation_form.js' %}"></script>
     <script src="{% static 'js/show_errors.js' %}"></script>
+    <script src="{% static 'js/timeout.js' %}"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_key }}&callback=initMap"></script>
+    <script src="{% static 'js/maps.js' %}"></script>
 
 
 
