Added forms.py for menu, model and html

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,109 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>MENU</h1>
-<div class="container mt-5">
-    <h2 class="text-center mb-4">Our Menu</h2>
-    <div class="menu">
-        <div class="row">
-            <!-- Starters -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <h3 class="menu-category">Starters</h3>
-                <ul class="list-unstyled">
-                    <li class="menu-item">
-                        <h5>Starter 1</h5>
-                        <p>A delicious description of Starter 1.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Starter 2</h5>
-                        <p>A delightful description of Starter 2.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Starter 3</h5>
-                        <p>A mouth-watering description of Starter 3.</p>
-                    </li>
-                </ul>
-            </div>
-            <!-- Mains -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <h3 class="menu-category">Mains</h3>
-                <ul class="list-unstyled">
-                    <li class="menu-item">
-                        <h5>Main Course 1</h5>
-                        <p>A flavorful description of Main Course 1.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Main Course 2</h5>
-                        <p>An enticing description of Main Course 2.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Main Course 3</h5>
-                        <p>A scrumptious description of Main Course 3.</p>
-                    </li>
-                </ul>
-            </div>
-            <!-- Desserts -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <h3 class="menu-category">Desserts</h3>
-                <ul class="list-unstyled">
-                    <li class="menu-item">
-                        <h5>Dessert 1</h5>
-                        <p>A heavenly description of Dessert 1.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Dessert 2</h5>
-                        <p>A delightful description of Dessert 2.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Dessert 3</h5>
-                        <p>A sweet description of Dessert 3.</p>
-                    </li>
-                </ul>
-            </div>
-            <!-- Specials -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <h3 class="menu-category">Specials</h3>
-                <ul class="list-unstyled">
-                    <li class="menu-item">
-                        <h5>Special 1</h5>
-                        <p>An exclusive description of Special 1.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Special 2</h5>
-                        <p>A unique description of Special 2.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Special 3</h5>
-                        <p>A limited-time description of Special 3.</p>
-                    </li>
-                </ul>
-            </div>
-            <!-- Drinks -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <h3 class="menu-category">Drinks</h3>
-                <ul class="list-unstyled">
-                    <li class="menu-item">
-                        <h5>Drink 1</h5>
-                        <p>A refreshing description of Drink 1.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Drink 2</h5>
-                        <p>A thirst-quenching description of Drink 2.</p>
-                    </li>
-                    <li class="menu-item">
-                        <h5>Drink 3</h5>
-                        <p>An invigorating description of Drink 3.</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- <h1>Menu List</h1>
-<ul>
-    {% for item in items %}
-    <li>{{ item.name }} </li>
-    {% endfor %}
-</ul> -->
 
-{%endblock%}
+{% include 'menu_content.html' %}
+{% endblock %}
