--- a/templates/about.html
+++ b/templates/about.html
@@ -24,5 +24,54 @@
         </div>
     </div>
 </div>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Customer Reviews&emsp;<i class="fa-solid fa-star"></i></h2>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+
+        <div class="col">
+            <div class="card">
+                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="Review 1">
+                <div class="card-body">
+                    <h5 class="card-title">John Doe</h5>
+                    <p class="card-text">"The food was absolutely amazing, and the service was impeccable. I highly
+                        recommend this restaurant for anyone looking for a fantastic dining experience."</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="Review 2">
+                <div class="card-body">
+                    <h5 class="card-title">Jane Smith</h5>
+                    <p class="card-text">"We had a wonderful time at this restaurant. The atmosphere was perfect, and
+                        the menu had so many delicious options. We'll definitely be coming back!"</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="Review 3">
+                <div class="card-body">
+                    <h5 class="card-title">Mark Johnson</h5>
+                    <p class="card-text">"The staff was incredibly friendly and attentive. The food was amazing, and the
+                        presentation was beautiful. I can't wait to go back!"</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="Review 4">
+                <div class="card-body">
+                    <h5 class="card-title">Sarah Brown</h5>
+                    <p class="card-text">"This restaurant is a hidden gem. The ambiance, food, and service are all
+                        top-notch. I would highly recommend it to anyone looking for a memorable dining experience."</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {%endblock%}
