--- a/templates/staff_templates/edit_menu_item.html
+++ b/templates/staff_templates/edit_menu_item.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="container mt-5">
     <h2 class="text-center mb-4">Edit Menu Item</h2>
@@ -7,19 +7,19 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="{{ form.category.id_for_label }}">Category:</label>
-            {{ form.category }}
+            {{ form.category|as_crispy_field }}
         </div>
         <div class="form-group">
             <label for="{{ form.name.id_for_label }}">Name:</label>
-            {{ form.name }}
+            {{ form.name|as_crispy_field }}
         </div>
         <div class="form-group">
             <label for="{{ form.description.id_for_label }}">Description:</label>
-            {{ form.description }}
+            {{ form.description|as_crispy_field }}
         </div>
         <div class="form-group">
             <label for="{{ form.price.id_for_label }}">Price:</label>
-            {{ form.price }}
+            {{ form.price|as_crispy_field }}
         </div>
         <button type="submit" class="btn btn-primary">Save changes</button>
     </form>
