--- a/templates/staff_templates/staff_menu.html
+++ b/templates/staff_templates/staff_menu.html
@@ -25,13 +25,16 @@
                 <td>{{ item.price }}</td>
                 <td>
                     <a href="{% url 'edit_menu_item' item.id %}" class="btn btn-primary">Edit</a>
+                    <a href="{% url 'delete_menu_item' item.id %}" class="btn btn-danger"
+                        onclick="return confirm('Are you sure you want to delete this menu item?')">Delete</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     <div class="text-center mt-4">
-        <a href="" class="btn btn-primary">Add New Menu Item</a>
+        <a href="{% url 'create_menu_item' %}" class="btn btn-primary">Add New Menu Item</a>
+
     </div>
 </div>
 {% endblock %}
