--- a/templates/edit_reservation.html
+++ b/templates/edit_reservation.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Edit Reservation</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Edit Reservation</h2>
+</div>
 {% include 'reservation_form.html' %}
 {% endblock %}
