STYLING: Added css styling to home page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,7 +4,8 @@
 <!-- Jumbotron -->
 <div class="jumbotron jumbotron-fluid text-center py-5">
     <div class="container">
-        <h1 class="display-4">Welcome to Our Restaurant</h1>
+        <h1 class="display-4">Welcome to <span class="title display-4 ">Our Restaurant</span>
+        </h1>
         <p class="lead">Discover our delicious menu and enjoy an unforgettable dining experience.</p>
     </div>
 </div>
@@ -265,7 +266,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card text-center">
-                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/dinner_3.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">About Us</h5>
                     <p class="card-text">Learn more about our story and our commitment to great food.</p>
@@ -275,7 +276,7 @@
         </div>
         <div class="col-md-4">
             <div class="card text-center">
-                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/menu.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Our Menu</h5>
                     <p class="card-text">Discover our delicious menu full of mouth-watering dishes.</p>
@@ -285,7 +286,7 @@
         </div>
         <div class="col-md-4">
             <div class="card text-center">
-                <img src="{% static 'images/myimage.jpg' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/single_table.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Reservations</h5>
                     <p class="card-text">Book a table for a memorable dining experience.</p>
