--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,7 @@ header {
     background-color: #212529;
 }
 
+
 .navbar-brand,
 .navbar-nav .nav-link {
     font-family: 'Playfair Display', serif;
@@ -32,6 +33,7 @@ header {
     color: #f8f9fa !important;
     font-size: 40px;
     font-weight: bold;
+    font-style: italic;
 }
 
 .navbar-nav .nav-link {
@@ -62,6 +64,12 @@ header {
 }
 
 /* HOME PAGE CSS STYLING */
+.title {
+    font-style: italic;
+    font-weight: 800;
+    font-size: 4.4rem;
+    display: inline;
+}
 
 .carousel-item img {
     object-fit: cover !important;
@@ -86,6 +94,13 @@ header {
 
 .single-image {
     display: block;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .title {
+        display: block;
+    }
 }
 
 /* Media query for larger screens */
