--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,7 @@
     <script src="{% static 'js/timeout.js' %}"></script>
     <script async src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_key }}&callback=initMap"></script>
     <script src="{% static 'js/maps.js' %}"></script>
-
-
+    <script src="{%static 'js/delete_menu_item.js'%}"></script>
 
 </body>
 
