--- a/templates/staff_templates/edit_menu_item.html
+++ b/templates/staff_templates/edit_menu_item.html
@@ -8,18 +8,46 @@
         <div class="form-group">
             <label for="{{ form.category.id_for_label }}">Category:</label>
             {{ form.category|as_crispy_field }}
+            {% if form.name.errors %}
+            <div class="invalid-feedback d-block">
+                {% for error in form.name.errors %}
+                {{ error }}
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
         <div class="form-group">
             <label for="{{ form.name.id_for_label }}">Name:</label>
             {{ form.name|as_crispy_field }}
+            {% if form.name.errors %}
+            <div class="invalid-feedback d-block">
+                {% for error in form.name.errors %}
+                {{ error }}
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
         <div class="form-group">
             <label for="{{ form.description.id_for_label }}">Description:</label>
             {{ form.description|as_crispy_field }}
+            {% if form.name.errors %}
+            <div class="invalid-feedback d-block">
+                {% for error in form.name.errors %}
+                {{ error }}
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
         <div class="form-group">
             <label for="{{ form.price.id_for_label }}">Price:</label>
             {{ form.price|as_crispy_field }}
+            {% if form.name.errors %}
+            <div class="invalid-feedback d-block">
+                {% for error in form.name.errors %}
+                {{ error }}
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
         <button type="submit" class="btn btn-primary">Save changes</button>
     </form>
