--- a/templates/staff_templates/staff_menu.html
+++ b/templates/staff_templates/staff_menu.html
@@ -19,14 +19,16 @@
         <tbody>
             {% for item in items %}
             <tr>
-                <td>{{ item.category }}</td>
-                <td>{{ item.name }}</td>
-                <td>{{ item.description }}</td>
-                <td>{{ item.price }}</td>
+                <td data-label="Category:">{{ item.category }}</td>
+                <td data-label="Name:">{{ item.name }}</td>
+                <td data-label="Description:">{{ item.description }}</td>
+                <td data-label="Price:" class="price">€{{ item.price }}</td>
                 <td>
-                    <a href="{% url 'edit_menu_item' item.id %}" class="btn btn-primary">Edit</a>
-                    <a href="{% url 'delete_menu_item' item.id %}" class="btn btn-danger"
-                        onclick="return confirm('Are you sure you want to delete this menu item?')">Delete</a>
+                    <div class="btn-group d-flex">
+                        <a href="{% url 'edit_menu_item' item.id %}" class="btn btn-edit">Edit</a>
+                        <a href="{% url 'delete_menu_item' item.id %}" class="btn btn-delete delete-menu-item"
+                            data-delete-url="{% url 'delete_menu_item' item.id %}">Delete</a>
+                    </div>
                 </td>
             </tr>
             {% endfor %}
