--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,8 @@
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-primary btn-responsive login-btn" type="submit">Login</button>
+
+            <button class="btn  btn-responsive login-btn" type="submit">Login</button>
         </form>
 
     </div>
