--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -42,6 +42,9 @@
                                     {{ radio.choice_label }}
                                 </label>
                                 {% endfor %}
+                                <small id="timeHelp" class="form-text text-muted">
+                                    {{ form.time.help_text }}
+                                </small>
                             </div>
                             {% if form.time.errors %}
                             <div class="invalid-feedback d-block error-msg">
@@ -66,6 +69,7 @@
                         <div class="form-group">
                             <label for="{{ form.party_size.id_for_label }}"><i class="fa-solid fa-users"></i></label>
                             {{ form.party_size|as_crispy_field }}
+
 
                         </div>
                         <button type="submit" class="btn btn-submit reservation-form-submit"
