--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -33,7 +33,7 @@
         </div>
         <!-- Second images -->
         <div class="carousel-item">
-            <div class="d-none d-xl-none">
+            <div class="d-lg-none  d-xl-none">
                 <img src="{% static 'images/back_2.jpg' %}" class="d-block w-100 carousel-image single-image "
                     alt="Back of Restaurant">
             </div>
@@ -256,7 +256,7 @@
 <div class="container mt-5">
     <h2 class="text-center mb-4">Where to Find Us &emsp;<i class="fa-solid fa-question"></i></h2>
     <div class="container mt-5">
-        <div id="map" style="height: 400px; width: 100%;"></div>
+        <div id="map" style="height: 500px; width: 100%;"></div>
     </div>
 </div>
 <!-- Links to other sections -->
